--- a/Global Chess Rankings/admin.html
+++ b/Global Chess Rankings/admin.html
@@ -8,22 +8,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
 </head>
 <body>
-    <nav class="navbar">
+    <nav class="navbar has-shadow">
         <div class="navbar-brand">
-            <a href="chess.html" class="navbar-item">
-                <img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/SamCopeland/phpmeXx6V.png" alt="" class="mr-2">
+            <figure class="image is-64x64 m-1 ml-2 mb-2">
+                <a href="chess.html">
+                    <img src="https://images.chesscomfiles.com/uploads/v1/images_users/tiny_mce/SamCopeland/phpmeXx6V.png" alt="">
+                </a>
+            </figure>
+            <a href="chess.html" class="navbar-item is-size-4 pl-0">
                 Global Chess Rankings
             </a>
         </div>
-        <a href="admin.html" class="navbar-item">Admin</a>
-        <a href="games.html" class="navbar-item">Games</a>
+        <a href="admin.html" class="navbar-item is-size-4">Admin</a>
+        <a href="games.html" class="navbar-item is-size-4">Games</a>
     </nav>
-    <div class="columns mt-1 m-0">
-        <div class="field box column">
+    <div class="columns mt-2 m-0">
+        <div class="field box column ml-2 mr-2">
             <strong class="is-size-5">Add a Game</strong>
             <input type="date" class="input is-rounded mb-2 mt-2" id="date">
-            <input type="text" class="input is-rounded mb-2" id="whitePlayer" placeholder="White Player Name">
-            <input type="text" class="input is-rounded mb-2" id="blackPlayer" placeholder="Black Player Name">
+            <br>
+            <div class="columns mb-0">
+                <div class="column">
+                    <strong>White Player:</strong>
+                    <div class="select mb-1 mt-2">
+                        <select id="whitePlayer">
+        
+                        </select>
+                    </div>
+                </div>
+                <div class="column">
+                    <strong>Black Player:</strong>
+                    <div class="select mb-1 mt-2">
+                        <select id="blackPlayer">
+            
+                        </select>
+                    </div>
+                </div>
+            </div>
             <strong>Who Won?</strong>
             <div class="control mb-3">
                 <label class="radio">
@@ -75,17 +96,29 @@
                     <input type="text" class="input is-rounded mb-2 is-small" id="missedB" placeholder="Missed Wins">
                 </div>
             </div>
+            <div class="notification is-danger is-light is-hidden" id="invalidNotif">
+                One or more fields are <strong>invalid</strong>. Please check all fields to ensure they have valid inputs
+            </div>
+            <div class="notification is-success is-light is-hidden" id = "validNotif">
+                Succesful Submission! <strong>Game has been added</strong>
+            </div>
             <div class="control" onclick="addGame()">
-                <button class="button is-primary">Submit</button>
+                <button class="button is-primary" id="buttonSubmit">Submit</button>
             </div>
         </div>
-        <div class="field box column">
+        <div class="field box column mr-2">
             <strong class="is-size-5">Add a Player</strong>
             <input type="text" class="input is-rounded mb-2 mt-2" id="pFirstName" placeholder="First Name">
             <input type="text" class="input is-rounded mb-2" id="pLastName" placeholder="Last Name">
             <input type="text" class="input is-rounded mb-2" id="classical" placeholder="Classical Rating">
             <input type="text" class="input is-rounded mb-2" id="rapid" placeholder="Rapid Rating">
-            <input type="text" class="input is-rounded mb-2" id="blitz" placeholder="Blitx Rating">
+            <input type="text" class="input is-rounded mb-2" id="blitz" placeholder="Blitz Rating">
+            <div class="notification is-success is-light is-hidden" id = "validPlayer">
+                Succesful Submission! <strong>Player has been added</strong>
+            </div>
+            <div class="notification is-danger is-light is-hidden" id = "invalidPlayer">
+                One or more fields are <strong>invalid</strong>. Please check all fields to ensure they have valid inputs
+            </div>
             <div class="control" onclick="addPlayer()">
                 <button class="button is-primary mt-1">Submit</button>
             </div>
@@ -97,6 +130,21 @@
     let tempData = JSON.parse(localStorage.getItem("data"));
     let tempSeen = JSON.parse(localStorage.getItem("seen"))
 
+    tempData.forEach(player =>{
+        let whitePlayer = document.getElementById("whitePlayer")
+        let blackPlayer = document.getElementById("blackPlayer")
+
+        let option1 = document.createElement('option')
+        option1.setAttribute("value", player.name)
+        option1.textContent = player.name
+        whitePlayer.appendChild(option1)
+
+        let option2 = document.createElement('option')
+        option2.setAttribute("value", player.name)
+        option2.textContent = player.name
+        blackPlayer.appendChild(option2)
+    })
+
     function addPlayer(){
         let firstName = document.querySelector('#pFirstName').value;
         let lastName = document.querySelector('#pLastName').value;
@@ -104,27 +152,38 @@
         let classical = document.querySelector('#classical').value;
         let rapid = document.querySelector('#rapid').value;
         let blitz = document.querySelector('#blitz').value;
-        let id = tempData[tempData.length -1].id;
-        parseInt(id)
-        id++;
-        let finID = id.toString();
-        tempData.push({
-            name: name,
-            id: finID,
-            classicalRating: classical,
-            rapidRating: rapid,
-            blitzRating: blitz,
-            games: []
-        });
-        let playersString = JSON.stringify(tempData);
-        localStorage.setItem("data", playersString);
+        if(firstName == ""||lastName == ""||classical == ""||rapid == ""||blitz == ""){
+            let invalid = document.getElementById("invalidPlayer")
+            invalid.classList.remove("is-hidden")
+        }else{
+            let valid = document.getElementById("validPlayer")
+            valid.classList.remove("is-hidden")
+            let id = tempData[tempData.length -1].id;
+            let rank = 0;
+            parseInt(id)
+            id++;
+            let finID = id.toString();
+            tempData.push({
+                name: name,
+                id: finID,
+                classicalRating: classical,
+                rapidRating: rapid,
+                blitzRating: blitz,
+                games: []
+            });
+            let playersString = JSON.stringify(tempData);
+            localStorage.setItem("data", playersString);
+        }
     }
 
     function addGame(){
         let date = document.getElementById('date')
         let dateValue = date.value;
-        let whitePlayer = document.getElementById('whitePlayer').value
-        let blackPlayer = document.getElementById('blackPlayer').value
+        let whitePlayerDIV = document.getElementById('whitePlayer')
+        let blackPlayerDIV = document.getElementById('blackPlayer')
+        let whitePlayer = whitePlayerDIV.options[whitePlayerDIV.selectedIndex].value
+        let blackPlayer= blackPlayerDIV.options[blackPlayerDIV.selectedIndex].value
+
         let winner = ""
         if(document.getElementById('whiteWin').checked){
             winner = "1"
@@ -167,77 +226,84 @@
         let blunderB = document.getElementById('blunderB').value
         let missedB = document.getElementById('missedB').value
 
-        let additive = parseInt(tempSeen[0])
-        let numID = additive+1
-        let gameID = numID.toString()
-        tempSeen.unshift(gameID);
+        if(brilliantW==""||greatW==""||bestW==""||excellentW==""||goodW==""||bookW==""||inaccuracyW==""||mistakeW==""||blunderW==""||missedW==""||brilliantB==""||bestB==""||greatB==""||excellentB==""||goodB==""||bookB==""||inaccuracyB==""||mistakeB==""||blunderB==""||missedB==""||gameType==""||winner==""||dateValue==""||whitePlayer==blackPlayer){
+            let notif = document.getElementById("invalidNotif")
+            notif.classList.remove("is-hidden")
+        }else{
+            let notif = document.getElementById("validNotif")
+            notif.classList.remove("is-hidden")
+            let additive = parseInt(tempSeen[0])
+            let numID = additive+1
+            let gameID = numID.toString()
+            tempSeen.unshift(gameID);
 
-        tempData.forEach(element => {
-            if(whitePlayer === element.name){
-                element.games.push({
-                    date: dateValue,
-                    white: whitePlayer,
-                    black: blackPlayer,
-                    winner: winner,
-                    brilliantW: brilliantW,
-                    greatW: greatW,
-                    bestW: bestW,
-                    excellentW: excellentW,
-                    goodW: goodW,
-                    bookW: bookW,
-                    inaccuracyW: inaccuracyW,
-                    mistakeW: mistakeW,
-                    blunderW: blunderW,
-                    missedW: missedW,
-                    brilliantB: brilliantB,
-                    greatB: greatB,
-                    bestB: bestB,
-                    excellentB: excellentB,
-                    goodB: goodB,
-                    bookB: bookB,
-                    inaccuracyB: inaccuracyB,
-                    mistakeB: mistakeB,
-                    blunderB: blunderB,
-                    missedB: missedB,
-                    type: gameType,
-                    id: gameID
-                })
-            }else if(blackPlayer === element.name){
-                element.games.push({
-                    date: dateValue,
-                    white: whitePlayer,
-                    black: blackPlayer,
-                    winner: winner,
-                    brilliantW: brilliantW,
-                    greatW: greatW,
-                    bestW: bestW,
-                    excellentW: excellentW,
-                    goodW: goodW,
-                    bookW: bookW,
-                    inaccuracyW: inaccuracyW,
-                    mistakeW: mistakeW,
-                    blunderW: blunderW,
-                    missedW: missedW,
-                    brilliantB: brilliantB,
-                    greatB: greatB,
-                    bestB: bestB,
-                    excellentB: excellentB,
-                    goodB: goodB,
-                    bookB: bookB,
-                    inaccuracyB: inaccuracyB,
-                    mistakeB: mistakeB,
-                    blunderB: blunderB,
-                    missedB: missedB,
-                    type: gameType,
-                    id: gameID
-                })
-            }
-        });
-        let playersString = JSON.stringify(tempData);
-        localStorage.setItem("data", playersString);
+            tempData.forEach(element => {
+                if(whitePlayer === element.name){
+                    element.games.push({
+                        date: dateValue,
+                        white: whitePlayer,
+                        black: blackPlayer,
+                        winner: winner,
+                        brilliantW: brilliantW,
+                        greatW: greatW,
+                        bestW: bestW,
+                        excellentW: excellentW,
+                        goodW: goodW,
+                        bookW: bookW,
+                        inaccuracyW: inaccuracyW,
+                        mistakeW: mistakeW,
+                        blunderW: blunderW,
+                        missedW: missedW,
+                        brilliantB: brilliantB,
+                        greatB: greatB,
+                        bestB: bestB,
+                        excellentB: excellentB,
+                        goodB: goodB,
+                        bookB: bookB,
+                        inaccuracyB: inaccuracyB,
+                        mistakeB: mistakeB,
+                        blunderB: blunderB,
+                        missedB: missedB,
+                        type: gameType,
+                        id: gameID
+                    })
+                }else if(blackPlayer === element.name){
+                    element.games.push({
+                        date: dateValue,
+                        white: whitePlayer,
+                        black: blackPlayer,
+                        winner: winner,
+                        brilliantW: brilliantW,
+                        greatW: greatW,
+                        bestW: bestW,
+                        excellentW: excellentW,
+                        goodW: goodW,
+                        bookW: bookW,
+                        inaccuracyW: inaccuracyW,
+                        mistakeW: mistakeW,
+                        blunderW: blunderW,
+                        missedW: missedW,
+                        brilliantB: brilliantB,
+                        greatB: greatB,
+                        bestB: bestB,
+                        excellentB: excellentB,
+                        goodB: goodB,
+                        bookB: bookB,
+                        inaccuracyB: inaccuracyB,
+                        mistakeB: mistakeB,
+                        blunderB: blunderB,
+                        missedB: missedB,
+                        type: gameType,
+                        id: gameID
+                    })
+                }
+            });
+            let playersString = JSON.stringify(tempData);
+            localStorage.setItem("data", playersString);
 
-        let seenString = JSON.stringify(tempSeen)
-        localStorage.setItem("seen", seenString)
+            let seenString = JSON.stringify(tempSeen)
+            localStorage.setItem("seen", seenString)
+        }
     }
 </script>
 
